--- a/CSS/font.css
+++ b/CSS/font.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?wwnoiz');
-  src:  url('../fonts/icomoon.eot?wwnoiz#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?wwnoiz') format('truetype'),
-    url('../fonts/icomoon.woff?wwnoiz') format('woff'),
-    url('../fonts/icomoon.svg?wwnoiz#icomoon') format('svg');
+  src:  url('icomoon.eot?wwnoiz');
+  src:  url('icomoon.eot?wwnoiz#iefix') format('embedded-opentype'),
+    url('icomoon.ttf?wwnoiz') format('truetype'),
+    url('icomoon.woff?wwnoiz') format('woff'),
+    url('icomoon.svg?wwnoiz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
